# plot3d-rs

./: .gitignore  Cargo.toml  README.md  crates.js  help.html  settings.html  src-files.js
.github/workflows/: ci.yml  publish-docs.yml
plot3d/: all.html  index.html  sidebar-items.js
plot3d/block/: index.html  sidebar-items.js  struct.Block.html  struct.FaceData.html
plot3d/block_face_functions/: enum.FaceAxis.html  fn.block_connection_matrix.html  fn.build_connectivity_graph.html  fn.calculate_outward_normals.html  index.html  (+21 more)
search.index/: 0002c2cb7042.js  05e2c2735c29.js  06b146a771f9.js  09963900bbbb.js  0c664eef69a0.js  0c92dc95644e.js  1016a5f249c6.js  10ec75624abf.js  128efcaaa130.js  139bca5410f2.js  13ea76b52b47.js  144b0e5df2ac.js  14e44ecda2fa.js  1676ef3249c3.js  17cf651250ed.js  18cba43bd48f.js  194b10c25d21.js  1a579ba90eb2.js  1b63ff613789.js  1c499b04c365.js  1d192fbf3c1d.js  203f59e36d44.js  20c40cd163a6.js  21aa8a288b33.js  21e58e338410.js  23279bd86d64.js  27b2d0832702.js  27b98837adcc.js  293f90db78e6.js  314ff8e20336.js  32407cff5819.js  32f069c1f995.js  37b6a12161b0.js  38078f5bdfcb.js  3908c4903f06.js  3b2b0e618601.js  3b65d7bd4732.js  3c21f70c1a78.js  411d07523277.js  4240d0296aa3.js  (+19 more)
src/: block.rs  block_face_functions.rs  connectivity.rs  differencing.rs  graph.rs  lib.rs  merge_blocks.rs  point_match.rs  read.rs  rotational_periodicity.rs  split_block.rs  translational_periodicity.rs  utils.rs  write.rs
tests/: paht.rs  test_connectivity.rs  test_merge_blocks.rs  test_periodicity.rs  test_read_write.rs  test_rotational_periodicity.rs
(+119 files in other folders)
