[package]
name = "plot3d"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "plot3d"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
thiserror = "1.0"

# for tests (download)
reqwest = { version = "0.12", features = ["blocking"] }
ndarray = { version = "0.15", features = ["rayon"] }
ndarray-stats = "0.6"
petgraph = "0.6"
itertools = "0.12"
num-traits = "0.2"
ordered-float = "4.2"
metis = "0.2"
polars = { version = "0.51", features = ["lazy", "parquet", "csv"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.10"
