[package]
name = "plot3d"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Utilities for reading, writing, and manipulating NASA PLOT3D structured grids."

[lib]
name = "plot3d"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
metis = { version = "0.2", optional = true }

# for tests (download)
reqwest = { version = "0.12", features = ["blocking"] }

[features]
default = []
metis-partition = ["metis"]

[dev-dependencies]
tempfile = "3.10"
